jenkins/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      volumes:
        - name: jenkins
          configMap:
            defaultMode: 0755
            name: jenkins
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: infra
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.440.3-lts-jdk17
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
            - name: agent
              protocol: TCP
              containerPort: 50000
          readinessProbe:
            httpGet:
              path: /jenkins/login
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /jenkins/login
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-vol
              subPath: jenkins-vol
              mountPath: /var/jenkins_home
            # - name: jenkins
            #   mountPath: /var/jenkins_home/casc_configs/jenkins.yaml
            #   subPath: jenkins.yaml
