jenkins/swarm.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: jenkins-swarm
  labels:
    app: jenkins-swarm
spec:
  selector:
    matchLabels:
      app: jenkins-swarm
  template:
    metadata:
      labels:
        app: jenkins-swarm
    spec:
      restartPolicy: Always
      volumes:
        - name: buildkitd
          configMap:
            defaultMode: 0755
            name: buildkitd
        - name: var-run
          emptyDir: {}
        - name: run-containerd
          emptyDir: {}
        - name: run-buildkit
          emptyDir: {}
        - name: dockerd-vol
          hostPath:
            path: /data/dockerd
            type: DirectoryOrCreate
        - name: jenkins-swarm-vol
          hostPath:
            path: /data/jenkins-swarm
            type: DirectoryOrCreate
        - name: buildkitd-vol
          hostPath:
            path: /data/buildkitd
            type: DirectoryOrCreate
      nodeSelector:
        jenkins: "true"
      containers:
        - name: dockerd
          image: docker:26.1.2-dind
          args:
            - "--insecure-registry"
            - "172.16.115.11:5000"
            - "--log-level"
            - "error"
            - "--log-format"
            - "json"
          tty: true
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - name: dind-con-port
              containerPort: 2376
              protocol: TCP
          volumeMounts:
            - name: dockerd-vol
              mountPath: /var/lib/docker
            - name: jenkins-swarm-vol
              mountPath: /data/jenkins-swarm
            - name: var-run
              mountPath: /var/run
            - name: run-containerd
              mountPath: /var/run/docker/containerd
          # readinessProbe:
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
          #   exec:
          #     command:
          #       - "docker"
          #       - "-H"
          #       - "unix:///var/run/docker.sock"
          #       - "ps"
          # livenessProbe:
          #   initialDelaySeconds: 5
          #   periodSeconds: 3
          #   exec:
          #     command:
          #       - "docker"
          #       - "-H"
          #       - "unix:///var/run/docker.sock"
          #       - "ps"
        - name: buildkitd
          image: moby/buildkit:v0.13.2
          args:
            - buildctl
            - unix:///run/buildkit/buildkitd.sock
            - --addr
            - tcp://0.0.0.0:1234
            - --debug
          securityContext:
            privileged: true
          ports:
            - containerPort: 1234
          volumeMounts:
            - name: buildkitd-vol
              mountPath: /var/lib/buildkit
            - name: run-buildkit
              mountPath: /run/buildkit
            - name: buildkitd
              mountPath: /etc/buildkit/buildkitd.toml
              subPath: buildkitd.toml
          # readinessProbe:
          #   initialDelaySeconds: 15
          #   periodSeconds: 30
          #   exec:
          #     command:
          #       - buildctl
          #       - debug
          #       - workers
          # livenessProbe:
          #   initialDelaySeconds: 15
          #   periodSeconds: 30
          #   exec:
          #     command:
          #       - buildctl
          #       - debug
          #       - workers
        - name: jenkins-swarm
          image: buxiaomo/jenkins-swarm:3.46
          imagePullPolicy: Always
          volumeMounts:
            - name: jenkins-swarm-vol
              mountPath: /data/jenkins-swarm
            - name: var-run
              mountPath: /var/run
            - name: run-containerd
              mountPath: /run/containerd
            - name: run-buildkit
              mountPath: /run/buildkit
          livenessProbe:
            httpGet:
              path: /prometheus
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /prometheus
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 10
