jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  type: LoadBalancer
  ports:
    - name: admin
      port: 8080
      targetPort: 8080
    - name: agent
      port: 32767
      targetPort: 32767
      nodePort: 32767
